feat: Ingest Log events (#165)